FE/styles/mainsection.module.css
.cards {
  padding-top: 3.25rem;
  padding-bottom: 3rem;
  text-align: center;
  min-height: 550px;
}

.cards .h2 {
  font-weight: 800;
  margin-bottom: 3.5rem;
}

.cards .card {
  display: inline-block;
  width: 17rem;
  max-width: 100%;
  height: 100%;
  margin-right: 1rem;
  margin-left: 1rem;
  vertical-align: top;
  transition: 0.5s;
}

.cards .card:hover {
  background-color: #5f4dee;
  color: white;
}

.cards .cardImage {
  max-width: 16rem;
  margin-right: auto;
  margin-left: auto;
  margin-bottom: 2rem;
  width: 12.5rem;
}

.cards .cardTitle {
  margin-bottom: 0.5rem;
}

.cards .cardBody {
  padding: 0;
}

